# some-server

./: .gitignore  AGENTS.md  CMakeLists.txt
.agent/skills/ipc-integration/: SKILL.md
cmake/: configuration.cmake
conf/: gate.conf  gate.json  gate.yaml
docs/: interprocess-communication-design.md  interprocess-communication-implementation-plan.md
proto/ipc/common/v1/: types.proto
proto/ipc/control/v1/: control.proto
proto/ipc/data/v1/: envelope.proto
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cmake
src/common/basis/: singleton.cpp  singleton.h
src/common/ipc/: first_phase_topology_policy.h
src/framework/: CMakeLists.txt  framework.cmake
src/framework/application/: application.h  base.h  configuration.h  interface.h  lifecycle_task.h  runtime.h  service.h  service_base.h
src/framework/config/: access.h  value.h
src/framework/ipc/: CMakeLists.txt  ipc.cmake
src/framework/ipc/base/: envelope.h  process.h  receiver.h  result.h  types.h
src/framework/ipc/discovery/: discovery.cpp  discovery.h  etcd_discovery.cpp  etcd_discovery.h  etcd_discovery_backend.h  etcd_sdk_discovery_backend.cpp  etcdctl_discovery_backend.cpp  membership_view.h
src/framework/ipc/link/: control_codec.cpp  control_codec.h  link.h  link_manager.cpp  link_manager.h  link_view.h
src/framework/ipc/messaging/: data_codec.cpp  data_codec.h  messenger.cpp  messenger.h  payload_registry.cpp  payload_registry.h  remote_message_sender.h  transport_message_sender.cpp  transport_message_sender.h
src/framework/ipc/receiver/: local_receiver_directory.cpp  local_receiver_directory.h  receiver_directory.h  receiver_host.h  receiver_registry.cpp  receiver_registry.h
src/framework/ipc/routing/: relay_first_policy.cpp  relay_first_policy.h  route_plan.h  router.cpp  router.h  routing_context.h  topology_policy.h
src/framework/ipc/transport/: frame.h  tcp_transport.cpp  tcp_transport.h  transport.h
src/game/: CMakeLists.txt  application.cpp  application.h  game.cmake  main.cpp
src/game/services/: ipc_client_service.cpp  ipc_client_service.h  player_receiver_host.cpp  player_receiver_host.h  process_receiver_host.cpp  process_receiver_host.h  service_receiver_host.cpp  service_receiver_host.h
src/gate/: CMakeLists.txt  application.cpp  application.h  gate.cmake  loader.cpp  main.cpp
src/gate/services/: listener_service.cpp  listener_service.h  runtime_command_service.cpp  runtime_command_service.h
src/loader/: CMakeLists.txt  command_registry.cpp  command_registry.h  config.cpp  config.h  configuration.h  loader.cmake  loader.cpp  loader.h  loader_config.cpp  loader_config.h  loader_logging.cpp  loader_options.cpp  loader_options.h  logging.cpp  logging.h  options.cpp  options.h
src/loader/application/: loader.cpp  loader.h
src/relay/: CMakeLists.txt  application.cpp  application.h  main.cpp  relay.cmake
src/relay/services/: ipc_service.cpp  ipc_service.h
tests/: CMakeLists.txt  application_service_lifecycle_test.cpp  ipc_discovery_routing_test.cpp  ipc_etcd_discovery_test.cpp  ipc_multi_process_integration_test.cpp  ipc_receiver_messaging_test.cpp  ipc_transport_link_test.cpp  loader_config_test.cpp
tools/dev/: dev.yaml  dockerfile  start.sh
tools/ipc/: run_integration.sh
